feat(ux): first-round player-experience optimizations (§2-§7)
§2 channel discovery: KnownChannelRegistry + ConfigSyncChannels + ListCommandService
  in client-core; /nc list on all platforms; Tab complete uses dynamic registry
  (removes hardcoded global/local/pvp/resource).

§3 ChatMode visibility: ChatModeDescriptions in client-core; toggle output aligned
  across platforms (sponge/multipaper-grade explanation everywhere).
  pnx skipped (its toggle is chat-on/off, not ChatMode).

§4 @mention: MentionNotifier dedup (3s) + highlightMentions; MentionPacket handler
  wired on all platforms (title+sound where API exists; bungee/nukkit/pnx degraded
  to chat/actionbar — see TODOs). Chat rendering highlights @name.

§5 kick/mute target notification: bukkit PendingRequest carries targetId/operator/
  duration; KICK/MUTE success notifies the target player. Non-bukkit platforms
  notify target from response extra targetId when available (TODO: backend must
  echo targetId for full coverage).

§6 channel color: ChannelColorResolver (deterministic hash -> 10-color palette) +
  FormatTemplateEngine {channel_color} placeholder; defaultFormat updated on all
  platforms; bungee/pnx formatters now use FormatTemplateEngine.

§7 switch seamlessness: join immediate receipt unified to '正在加入频道...'
  (was '已加入' on velocity/bungee/pnx); async handler confirms '已加入频道 X'
  on backend accept, actionable error on reject; action bar 'current channel'
  on join/leave success (proxy degraded, no stable actionbar API).

Full compile + test suite green.